# amme_data_processing

./: .gitignore  README.md  setup.cfg
adp/: assign_bar_quantile.py  interactive_plots.py  make_agent_stat.py  make_agent_stat_daily.py  make_daily_active_passive_volume.py  make_daily_close_and_fundamental_r2.py  make_daily_returns_autocorrelation.py  make_daily_trade_bars.py  make_full_traded_volume_graph.py  make_intraday_returns_autocorrelation.py  make_intraday_trade_bars.py  make_order_cascades.py  make_returns_qq_data.py  make_volatility_and_volume_analysis.py  timemethods.py
adp/plotting/: plot_agent_positions.py  plot_intraday_price.py  plot_price.py  plot_volume_and_returns.py
adp/readers/: agent_stat_reader.py  trades_reader.py
tests/: test_agent_stat_reader.py  test_assign_bar_quantile.py  test_make_daily_close_and_fundamental_r2.py  test_make_daily_volumes.py  test_make_order_cascades.py  test_make_return_autocorrelations.py  test_make_return_qq_data.py  test_make_trade_bars.py  test_plot_trade_bars.py  test_traded_volume_graph.py  test_vol_and_vol_analysis.py
