[metadata]
name = adp
version = 0.0.2
author = Nicholas Skar-Gislinge
author_email = mesalasnano@gmail.com
description = Tools for processiong amme simulation data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mesalas/amme_data_processing
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    pandas
    numpy